Fixed rendering cutoffs

--- a/src/styles/turmoil.less
+++ b/src/styles/turmoil.less
@@ -100,12 +100,14 @@
 }
 
 .global-event-card-content {
-    width: 276px !important;
-    height: 104px !important;
+    width: 300px !important;
+    height: 118px !important;
     justify-content: center;
     margin: 0 auto;
-    top: 10px;
+    top: 3px;
     overflow-x: hidden;
+    justify-content: start;
+    scale: 0.9;
 }
 
 .global-event-title {
